[package]
authors = ["alpo <yukseloglua@berkeley.edu>", "connor <connor@osmosis.team>"]
edition = "2021"
name = "sumtree-orderbook"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
skip-integration-tests = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.4", features = [
  "cosmwasm_1_1",
  # "cosmwasm_1_4" # <- Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
] }
cw-storage-plus = "1.1.0"
cw-utils = "1.0.3"
cw2 = "1.1.1"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
osmosis-std-derive = "0.15.3"
osmosis-std = "0.25.0"
prost = { version = "0.11.2", default-features = false, features = [
  "prost-derive",
] }


[dev-dependencies]
cw-multi-test = "0.18.0"
rand = "0.8.4"
osmosis-test-tube = "25.0.0"
